name:                is-github-down
version:             0.1.0.0
synopsis:            Check if GitHub is down, or not
description:         Please see README.md
homepage:            http://github.com/kimar/is-github-down.hs#readme
license:             MIT
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable is-github-down
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-conduit
                     , http-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kimar/is-github-down.hs
